[package]
name = "bloodbath"
version = "0.1.1"
edition = "2021"
description = "This is a Rust implementation of the Bloodbath event scheduling library."
authors = ["Webster Avosa <webster@webstercodes.online>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }